2003-05-16  John Levon  <levon@movementarian.org>

	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: expose anonymous symbols
	to the world as "??sectionname". Useful for .plt
	and .fini, which are quite common.

	* libpp/name_storage.cpp: demangle anonymous symbols
	nicely.

2003-05-16  John Levon  <levon@movementarian.org>

	* libpp/symbol_sort.cpp: fix image-sorting

2003-05-16  John Levon  <levon@movementarian.org>

	* libpp/name_storage.h:
	* libpp/name_storage.cpp: make ID be per-container

2003-05-16  John Levon  <levon@movementarian.org>

	* libpp/name_storage.h:
	* libpp/name_storage.cpp: merge processed names
	into one string, remove the boolean

2003-05-16  John Levon  <levon@movementarian.org>

	* libpp/name_storage.h:
	* libpp/name_storage.cpp: whoops, use string
	not stored_name for the ID map

2003-05-16  John Levon  <levon@movementarian.org>

	* libpp/name_storage.h:
	* libpp/name_storage.cpp: split into three
	stores for debug filenames, symbols, and images

	* libpp/format_output.cpp:
	* libpp/profile_container.cpp:
	* libpp/sample_container.cpp:
	* libpp/symbol_container.cpp:
	* libpp/symbol_sort.cpp:
	* pp/opannotate.cpp: changes from above

2003-05-16  John Levon  <levon@movementarian.org>

	* libpp/Makefile.am:
	* libpp/name_storage.h:
	* libpp/name_storage.cpp: add shared storage
	and caching of symbol and file names

	* libpp/opp_symbol.h:
	* libpp/format_output.cpp:
	* libpp/profile_container.cpp:
	* libpp/sample_container.cpp:
	* libpp/symbol_container.cpp:
	* libpp/symbol_container.h:
	* libpp/symbol_sort.cpp:
	* libpp/symbol_sort.h:
	* pp/opannotate.cpp:
	* pp/opreport.cpp: use it

	* pp/opgprof_options.cpp: add unused demangle
	options to hack-fix the build

2003-05-16  John Levon  <levon@movementarian.org>

	* libpp/symbol_sort.cpp: fix --sort debug

2003-05-16  John Levon  <levon@movementarian.org>

	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: remove have_debug_info()

2003-05-16  Philippe Elie  <phil.el@wanadoo.fr>
